--- a/index.html
+++ b/index.html
@@ -3,71 +3,127 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <script src="https://kit.fontawesome.com/07993bcc41.js" crossorigin="anonymous"></script>
+
   <title>Frontend Mentor | Fylo landing page with two column layout</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
+  <header>
+    <div class="content">
+      <img src="/images/logo.svg" alt="Fylo logo">
+      <nav>
+        <a href="/">Features</a>
+        <a href="/">Team</a>
+        <a href="/">Sign In</a>
+      </nav>
+    </div>
+  </header>
+  <main>
+    <div class="hero">
+      <div class="content">
+        <div class="info">
+          <h1>All your files in one secure location, accessible anywhere.</h1>
+          <p>Fylo stores your most important files in one secure location. 
+            Access them wherever you need, share and collaborate with friends, 
+            family, and co-workers.</p>
+          <div class="actions">
+            <input type="email" name="email" id="email">
+            <button>Get Started</button>
+          </div>
+        </div>
+        <img src="/images/illustration-1.svg" alt="illustration-1">
+      </div>
+    </div>
 
-  Features
-  Team
-  Sign In
+    <section class="productive">
+      <div class="content">
+        <div class="section-text">
+          <h2>Stay productive, wherever you are</h2>
+          <p>Never let location be an issue when accessing your files. Fylo has you 
+            covered for all of your file storage needs.
+          
+            Securely share files and folders with friends, family and colleagues for 
+            live collaboration. No email attachments required!
+          
+            <span>See how Fylo works <img src="/images/icon-arrow.svg" alt="arrow"></span></p>
+          <div class="testimonial">
+            <img src="/images/icon-quotes.svg" alt="quotes">
+            <p>Fylo has improved our team productivity by an order of magnitude. Since 
+              making the switch our team has become a well-oiled collaboration machine.</p>
+            <div class="testimonial-owner">
+              <img src="/images/avatar-testimonial.jpg" alt="avatar">
+              <p>
+                <span>Kyle Burton</span>
+                Founder & CEO, Huddle
+              </p>
+            </div>
+          </div>
+        </div>
 
-  All your files in one secure location, accessible anywhere.
+        <img src="/images/illustration-2.svg" alt="illustration-2">
+      </div>
+    </section>
 
-  Fylo stores your most important files in one secure location. 
-  Access them wherever you need, share and collaborate with friends, 
-  family, and co-workers.
-
-  Get Started
-
-  Stay productive, wherever you are
-
-  Never let location be an issue when accessing your files. Fylo has you 
-  covered for all of your file storage needs.
-
-  Securely share files and folders with friends, family and colleagues for 
-  live collaboration. No email attachments required!
-
-  See how Fylo works
-
-  Fylo has improved our team productivity by an order of magnitude. Since 
-  making the switch our team has become a well-oiled collaboration machine.
-
-  Kyle Burton
-  Founder & CEO, Huddle
-
-  Get early access today
-
-  It only takes a minute to sign up and our free starter tier is extremely generous. 
-  If you have any questions, our support team would be happy to help you.
-
-  Get Started For Free
-
-  Phone: +1-543-123-4567
-  example@fylo.com
-
-  About Us
-  Jobs
-  Press
-  Blog
-
-  Contact Us
-  Terms
-  Privacy
-
+    <section class="early-access">
+      <div class="content">
+        <div class="section-text">
+          <h3>Get early access today</h3>
+          <p>It only takes a minute to sign up and our free starter tier is extremely generous. 
+            If you have any questions, our support team would be happy to help you.</p>
+        </div>
+        <div class="section-actions">
+          <input type="email" name="email" id="email">
+          <button>Get Started For Free</button>
+        </div>  
+      </div>
+    </section>
+  </main>
   <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
+    <div class="content">
+      <img src="/images/logo.svg" alt="logo">
+      <div class="footer-content">
+        <div class="contacts">
+          <img src="/images/icon-phone.svg" alt="icon-phone">
+          <p>+1-543-123-4567</p>
+
+          <img src="/images/icon-email.svg" alt="icon-email">
+          <p>example@huddle.com</p>
+        </div>
+
+        <nav>
+          <span><a href="/">About Us</a></span>
+          <span><a href="/">Contact Us</a></span>
+          <span><a href="/">Jobs</a></span>
+          <span><a href="/">Terms</a></span>
+          <span><a href="/">Press</a></span>
+          <span><a href="/">Privacy</a></span>
+          <span><a href="/">Blog</a></span>
+        </nav>
+  
+        <div class="social-midia">
+          <div class="midia">
+            <i class="fab fa-facebook-f"></i>
+          </div>
+          <div class="midia">
+            <i class="fab fa-twitter"></i>
+          </div>
+          <div class="midia">
+            <i class="fab fa-instagram"></i>
+          </div>
+        </div>
+
+      </div>
+
+      <p class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="https://www.github.com/patrickpaiva">Patrick Paiva</a>.
+      </p>
+    </div>
   </footer>
 </body>
 </html>
