--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             Access them wherever you need, share and collaborate with friends, 
             family, and co-workers.</p>
           <div class="actions">
-            <input type="email" name="email" id="email">
+            <input type="email" name="email" id="email" placeholder="Enter your email...">
             <button>Get Started</button>
           </div>
         </div>
@@ -45,10 +45,10 @@
         <div class="section-text">
           <h2>Stay productive, wherever you are</h2>
           <p>Never let location be an issue when accessing your files. Fylo has you 
-            covered for all of your file storage needs.
+            covered for all of your file storage needs.<br /> <br />
           
             Securely share files and folders with friends, family and colleagues for 
-            live collaboration. No email attachments required!
+            live collaboration. No email attachments required!<br /> <br />
           
             <span>See how Fylo works <img src="/images/icon-arrow.svg" alt="arrow"></span></p>
           <div class="testimonial">
@@ -77,7 +77,7 @@
             If you have any questions, our support team would be happy to help you.</p>
         </div>
         <div class="section-actions">
-          <input type="email" name="email" id="email">
+          <input type="email" name="email" id="email" placeholder="example@email.com">
           <button>Get Started For Free</button>
         </div>  
       </div>
@@ -85,7 +85,7 @@
   </main>
   <footer>
     <div class="content">
-      <img src="/images/logo.svg" alt="logo">
+      <img src="/images/logo-footer.svg" alt="logo">
       <div class="footer-content">
         <div class="contacts">
           <img src="/images/icon-phone.svg" alt="icon-phone">
@@ -118,7 +118,8 @@
         </div>
 
       </div>
-
+    </div>
+    <div class="footer-attribution">
       <p class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
         Coded by <a href="https://www.github.com/patrickpaiva">Patrick Paiva</a>.
